--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,17 @@
 <div class="jumbotron">
   <div class="row">
     <div class='col-md-12'>
-      <h1>Is it open?</h1>
+      <h2>Is It Open?</h2>
     </div>
   </div>
 
   <div class="row">
-    <form class="form-inline">
-      <div class="form-group">
+    <form class="form-horizontal">
+      <div class="col-md-10 form-group">
         <input class="form-control" type="text" name="type" placeholder="What are you looking for?">
       </div>
-      <div class="form-group">
-        <input class="btn btn default" type="submit" name="submit" value="submit">
+      <div class="col-md-2 form-group">
+        <input class="btn btn-primary" type="submit" name="submit" value="submit">
       </div>
     </form>
   </div>
