whoops, kept working on ajax

--- a/app/views/home/index.js.erb
+++ b/app/views/home/index.js.erb
@@ -11,17 +11,26 @@ $(function(){
   debugger
 })
 
-function setKey(){
-  var new_key = new ApiKey('<%= @key %>')
-  return new_key.key
+
+function submitForm(){
+  $(".form-search-by-type").submit(function(e){
+    e.preventDefault
+    var searchType = $('input#search-type').val()
+    var searchKeyword = $('input#search-keyword').val()
+  })
+  sendData(searchType, searchKeyword)
 }
 
-function setLatitude(){
-  var latitude = "<%= @latitude %>"
-  return latitude
-}
+function sendData(type, keyword){
+  var data = {
+    'type': type,
+    'keyword': keyword
+  }
+  $.ajax({
+    url: <%= search_path %>,
+    method: "GET",
+    dataType: "json",
+    data: JSON.stringify(data)
 
-function setLongitude(){
-  var longitude = "<%= @longitude %>"
-  return longitude
+  })
 }
