--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="row">
-    <form class="form-horizontal form-search-by-type" data-remote="true">
+    <%= form_tag({controller: 'home', action: 'search'}, method: 'post', remote: true, class: "form-horizontal form-search-by-type") do %>
       <div class="col-md-5 form-group">
         <input class="form-control" id="search-type" type="text" name="type" placeholder="What are you looking for?">
       </div>
@@ -16,7 +16,7 @@
       <div class="col-md-2 form-group">
         <input class="btn btn-primary" id="submit" type="submit" name="submit" value="submit">
       </div>
-    </form>
+    <% end %>
   </div>
 
 </div>
