--- a/app/views/home/search.js.erb
+++ b/app/views/home/search.js.erb
@@ -8,14 +8,13 @@
 
 $(function(){
   submitForm()
-  debugger
 })
 
 
 function submitForm(){
   $(".form-search-by-type").submit(function(e){
     e.preventDefault
-    alert("index was called")
+    alert("search was called")
     var searchType = $('input#search-type').val()
     var searchKeyword = $('input#search-keyword').val()
   })
