jquery for showing info functional, but css off

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,7 +26,10 @@
     </div>
   </div>
     <div class="row">
+      <% count = 1 %>
       <%  4.times do %>
+        <div id="venue-<%= count %>">
+
         <div class="col-md-3">
           <!-- Dismiss from results button -->
           <!-- Popover JS, move to proper file after writing the rest of the jQuery -->
@@ -37,10 +40,10 @@
           <!-- Location title -->
           <h5 class="venue-title">Bob's Burgers</h5>
           <!-- Location thumbnail; accessible via Google Place Photos api call -->
-          <img class="img-responsive img-thumbnail venue-img" src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=200&photoreference=CnRtAAAATLZNl354RwP_9UKbQ_5Psy40texXePv4oAlgP4qNEkdIrkyse7rPXYGd9D_Uj1rVsQdWT4oRz4QrYAJNpFX7rzqqMlZw2h2E2y5IKMUZ7ouD_SlcHxYq1yL4KbKUv3qtWgTK0A6QbGh87GB3sscrHRIQiG2RrmU_jF4tENr9wGS_YxoUSSDrYjWmrNfeEHSGSc3FyhNLlBU&key=AIzaSyCY1evTMnMd-GWCnR0_1yWAK40pZBo9vo4" alt="Sophies Cuban Cuisine" />
+          <img class="img-responsive img-thumbnail venue-img" id="img-<%= count %>"src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=200&photoreference=CnRtAAAATLZNl354RwP_9UKbQ_5Psy40texXePv4oAlgP4qNEkdIrkyse7rPXYGd9D_Uj1rVsQdWT4oRz4QrYAJNpFX7rzqqMlZw2h2E2y5IKMUZ7ouD_SlcHxYq1yL4KbKUv3qtWgTK0A6QbGh87GB3sscrHRIQiG2RrmU_jF4tENr9wGS_YxoUSSDrYjWmrNfeEHSGSc3FyhNLlBU&key=AIzaSyCY1evTMnMd-GWCnR0_1yWAK40pZBo9vo4" alt="Sophies Cuban Cuisine" />
         </div>
         <!-- Venue information -->
-        <div class="col-md-3 hidden venue-info">
+        <div class="col-md-3 venue-info" id="info-<%= count %>">
           <ul>
             <li>Name: Bob's Burgers</li>
             <li>Address: 42 Wallaby Way</li>
@@ -48,6 +51,8 @@
             <li>Rating: <strong>4.9</strong></li>
           </ul>
         </div>
+        <% count += 1 %>
+      </div>
       <% end %>
     </div>
     <button type="button" class="btn btn-primary show-more" name="show">Show me more!</button>
