Setup index action to call the default venues API call

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,6 +20,8 @@
   </div>
 
 </div>
+
+  <%= @google_client.default_call() %>
   <div class="row">
     <div class="col-md-9">
       <h3>Open now near you</h3>
