--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="row">
-    <%= form_tag({controller: 'home', action: 'search'}, method: 'post', remote: true, class: "form-horizontal form-search-by-type") do %>
+    <%= form_tag({controller: 'search', action: 'create'}, method: 'post', remote: true, class: "form-horizontal form-search-by-type") do %>
       <div class="col-md-5 form-group">
         <input class="form-control" id="search-type" type="text" name="type" placeholder="What are you looking for?">
       </div>
@@ -18,43 +18,6 @@
       </div>
     <% end %>
   </div>
-
 </div>
 
-  <%= @google_client.default_call() %>
-  <div class="row">
-    <div class="col-md-9">
-      <h3>Open now near you</h3>
-    </div>
-  </div>
-    <div class="row">
-      <% count = 1 %>
-      <%  4.times do %>
-        <div id="venue-<%= count %>" class="venue-item">
-
-        <div class="col-md-3">
-          <!-- Dismiss from results button -->
-          <!-- Popover JS, move to proper file after writing the rest of the jQuery -->
-          <script>
-            $("[data-toggle=tooltip]").tooltip();
-          </script>
-          <button type="button" class="close" data-toggle="tooltip" data-placement="left" data-trigger="hover focus" aria-label="Close" title="Dismiss this venue from future searches"><span aria-hidden="true">&times;</span></button></button>
-          <!-- Location title -->
-          <h5 class="venue-title">Bob's Burgers</h5>
-          <!-- Location thumbnail; accessible via Google Place Photos api call -->
-          <img class="img-responsive img-thumbnail venue-img" id="img-<%= count %>"src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=200&photoreference=CnRtAAAATLZNl354RwP_9UKbQ_5Psy40texXePv4oAlgP4qNEkdIrkyse7rPXYGd9D_Uj1rVsQdWT4oRz4QrYAJNpFX7rzqqMlZw2h2E2y5IKMUZ7ouD_SlcHxYq1yL4KbKUv3qtWgTK0A6QbGh87GB3sscrHRIQiG2RrmU_jF4tENr9wGS_YxoUSSDrYjWmrNfeEHSGSc3FyhNLlBU&key=AIzaSyCY1evTMnMd-GWCnR0_1yWAK40pZBo9vo4" alt="Sophies Cuban Cuisine" />
-          <div class="venue-info" id="info-<%= count %>">
-            <ul>
-              <li>Name: Bob's Burgers</li>
-              <li>Address: 42 Wallaby Way</li>
-              <li>Phone Number: 212-420-6969 </li>
-              <li>Rating: <strong>4.9</strong></li>
-            </ul>
-          </div>
-        </div>
-        <% count += 1 %>
-      </div>
-      <% end %>
-    </div>
-    <button type="button" class="btn btn-primary show-more" name="show">Show me more!</button>
-</div>
+<%= render 'venue_display' %>
