--- a/app/views/venues/_venue.html.erb
+++ b/app/views/venues/_venue.html.erb
@@ -10,7 +10,13 @@
     <p class="hidden place-id"><%= venue.google_place_id %></p>
     <h5 class="venue-title"><%= venue.name %></h5>
     <!-- Location thumbnail; accessible via Google Place Photos api call -->
-    <img class="img-responsive img-thumbnail venue-img" src="https://maps.googleapis.com/maps/api/place/photo?maxwidth=200&photoreference=CnRtAAAATLZNl354RwP_9UKbQ_5Psy40texXePv4oAlgP4qNEkdIrkyse7rPXYGd9D_Uj1rVsQdWT4oRz4QrYAJNpFX7rzqqMlZw2h2E2y5IKMUZ7ouD_SlcHxYq1yL4KbKUv3qtWgTK0A6QbGh87GB3sscrHRIQiG2RrmU_jF4tENr9wGS_YxoUSSDrYjWmrNfeEHSGSc3FyhNLlBU&key=AIzaSyCY1evTMnMd-GWCnR0_1yWAK40pZBo9vo4" alt="Sophies Cuban Cuisine" />
+    <div class="venue-thumbnail-frame">
+      <span class="helper">
+      <img class="venue-img"
+      src="<%= get_venue_photo_reference(venue) %>"
+      alt="<%= venue.name %>" />
+      </span>
+    </div>
     <div class="venue-info">
       <ul>
         <li>Address: <%= venue.formatted_address %></li>
