begin building out create search js.erb page

--- a/app/views/searches/create.js.erb
+++ b/app/views/searches/create.js.erb
@@ -1,1 +1,3 @@
-alert("You made it!")
+alert("hi")
+
+$('row.venues').html(<%= j render partial: 'venues/venue_display', locals: {venues: @venues}%>)
