--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,5 +20,7 @@
   </div>
 </div>
 
-
+<div class="spinner">
+hello
+</div>
 <%= render partial: 'venues/venue_display', locals: {venues: @venues}%>
