--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,11 +6,28 @@
   </div>
 
   <div class="row">
+    <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyCx7YX5G2tbXgdLh6tEXoVwXDqSjrw5z-A">
+    </script>
+    <script type="text/javascript">
+        function initialize() {
+          var options = {
+            types: ['geocode']
+          }
+          var input = document.getElementById('addressAutocomplete')
+          new google.maps.places.Autocomplete(input, options)
+          debugger
+        }
+        google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
     <%= form_tag({controller: 'searches', action: 'create'}, method: 'post', remote: true, class: "form-horizontal form-search-by-type") do %>
-      <div class="col-md-5 form-group">
+      <div class="col-md-4 form-group">
+        <input class="form-control" id="addressAutocomplete" type="text" name="location" placeholder="Enter your address">
+      </div>
+      <div class="col-md-4 form-group">
         <input class="form-control" id="search-type" type="text" name="type" placeholder="What are you looking for?">
       </div>
-      <div class="col-md-5 form-group">
+      <div class="col-md-3 form-group">
         <input class="form-control" id="search-keyword" type="text" name="keyword" placeholder="Keyword (Optional)">
       </div>
       <div class="col-md-2 form-group">
