partial rendering not working, WIP

--- a/app/views/searches/create.js.erb
+++ b/app/views/searches/create.js.erb
@@ -1,3 +1,6 @@
-alert("hi")
-
-$('row.venues').html(<%= j render partial: 'venues/venue_display', locals: {venues: @venues}%>)
+$(function(){
+  $('submit').click(function(){
+    debugger
+    <%= j render partial: 'venues/venue_display', locals: { venues: @venues } %>
+  })
+})
