make logo, add some basic css styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,3 +46,16 @@
   max-height: 100px;
   max-width: 160px;
 }
+
+.jumbotron{
+  background: #1e1e1e;
+  text-align: center;
+}
+
+body {
+  background: #767677;
+}
+
+.venue-item{
+  background: #d4dbd5;
+}
