--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,9 @@
 <div class="jumbotron">
   <div class="row">
     <div class='col-md-12'>
-      <h2 class="heading">Is It Open?</h2>
+      <div class='col-md-10 logo'>
+        <%= image_tag('is-it-open.png') %>
+      </div>
     </div>
   </div>
 
@@ -16,7 +18,6 @@
           }
           var input = document.getElementById('addressAutocomplete')
           new google.maps.places.Autocomplete(input, options)
-          debugger
         }
         google.maps.event.addDomListener(window, 'load', initialize);
     </script>
