--- a/app/views/venues/_venue_display.html.erb
+++ b/app/views/venues/_venue_display.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-9">
-    <h3>Open now near you</h3>
+    <h3>10 minutes away...</h3>
   </div>
 </div>
   <div class="row venues">
@@ -9,5 +9,8 @@
     <% end %>
   </div>
 
-  <button type="button" class="btn btn-primary show-more" name="show">Show me more!</button>
+  <br><br>
+  <div class="row show-more">
+    <button type="button" class="btn btn-primary" name="show">Show me more!</button>
+  </div>
 </div>
