working partial adds data to dom

--- a/app/views/searches/create.js.erb
+++ b/app/views/searches/create.js.erb
@@ -1,6 +1,2 @@
-$(function(){
-  $('submit').click(function(){
-    debugger
-    <%= j render partial: 'venues/venue_display', locals: { venues: @venues } %>
-  })
-})
+debugger
+$('.venues').html('<%= j render partial: 'venues/venue_display', locals: { venues: @venues } %>')
