add transparent background, fix cols for mobile, other tweaks

--- a/app/views/venues/_venue.html.erb
+++ b/app/views/venues/_venue.html.erb
@@ -1,5 +1,5 @@
 <div class="venue-item">
-  <div class="col-md-3">
+  <div class="col-xs-10 col-sm-6 col-md-4">
     <!-- Dismiss from results button -->
     <!-- Popover JS, move to proper file after writing the rest of the jQuery -->
     <script>
