--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,19 +21,20 @@
 //@import url(https://fonts.googleapis.com/css?family=Josefin+Slab:400,700);
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
 @import url(https://fonts.googleapis.com/css?family=Roboto);
-
-.venue-info {
-  display: none;
-  z-index:999;
-  position:relative;
-}
+// 
+// .venue-info {
+//   display: none;
+//   z-index:999;
+//   position:relative;
+// }
 
 .venue-thumbnail-frame{
   height: 150px;
   width: 190px;
   background: black;
   overflow: hidden;
-  border: 5px solid white;
+  border: 2px solid white;
+  border-radius: 7px;
   white-space: nowrap;
   text-align: center; margin: 1em 0;
   color: white;
@@ -55,7 +56,6 @@
 .show-more{
   text-align: center;
 }
-
 // .josephin-slab{
 // //  font-family: 'Josefin Slab', serif;
 //   font-family: 'Poiret One', cursive;
@@ -63,41 +63,64 @@
 //   font-size: 120px;
 // }
 
-.header-border-bottom{
-  border-bottom: 10px white solid;
+.header-row{
+  border-bottom: 5px white solid;
 }
 
 body{
 //  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-family: 'Roboto', sans-serif;
-  background-image: image-url('background-image.jpg');
-  background-color: black;
   color: white;
 }
 
-.jumbotron{
-  background: #1e1e1e;
+.header{
   text-align: center;
 }
+
+.search-form{
+  text-align: center;
+}
+
+
+// .form-search-by-type{
+//   padding-left: 30px;
+// }
 
 .venue-item{
   background: #d4dbd5;
 }
 
 .content-wrapper{
-  background-color: #6C7578;
-  opacity: 0.5;
-  filter: alpha(opacity=60); /* For IE8 and earlier */
+  position: relative;
 }
 
-.container{
-  opacity: 0.9;
-  filter: alpha(opacity=60); /* For IE8 and earlier */
+.content-wrapper::after{
+  content : "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: image-url('background-image.jpg');
+  width: 100%;
+  height: 100%;
+  opacity : 0.4;
+  filter: alpha(opacity=40); /* For IE8 and earlier */
+  z-index: -1;
+}
 .closed{
   border: 5px solid red;
 }
 
+.container{
+  opacity: 0.9;
+  filter: alpha(opacity=90); /* For IE8 and earlier */
+  background-color: #545C5E;
+  border-radius: 10px;
+  max-width: 70%;
+}
+
+
 div.closed *{
   opacity: 0.6;
-  filter: alpha(opacity=40); /* For IE8 and earlier */
+  filter: alpha(opacity=60); /* For IE8 and earlier */
 }
