--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,17 @@
-  <div class="row">
-    <div class='col-md-12 header-border-bottom'>
-      <div class='col-md-10 logo'>
-        <%= image_tag('is-it-open.png') %>
+  <div class="content">
+    <div class="header">
+      <div class="row header-row">
+        <div class='col-xs-12 col-sm-12 col-md-12 logo'>
+          <%= image_tag 'is-it-open.png', :class => 'img-responsive' %>
+        </div>
       </div>
-    </div>
-  </div>
-  <br><br>
+      <br><br>
 
-  <div class="row">
-    <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyCx7YX5G2tbXgdLh6tEXoVwXDqSjrw5z-A">
-    </script>
-    <script type="text/javascript">
+      <div class="row search-form">
+        <script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyCx7YX5G2tbXgdLh6tEXoVwXDqSjrw5z-A">
+        </script>
+        <script type="text/javascript">
         function initialize() {
           var options = {
             types: ['geocode']
@@ -20,25 +20,25 @@
           new google.maps.places.Autocomplete(input, options)
         }
         google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-    <%= form_tag({controller: 'searches', action: 'create'}, method: 'post', remote: true, class: "form-horizontal form-search-by-type") do %>
-      <div class="col-md-4 form-group">
-        <input class="form-control" id="addressAutocomplete" type="text" name="location" placeholder="Enter your address">
+        </script>
+        <%= form_tag({controller: 'searches', action: 'create'}, method: 'post', remote: true, class: "form-horizontal form-search-by-type") do %>
+        <div class="col-sm-5 col-md-5 col-lg-5 form-group form-address-div">
+          <input class="form-control" id="addressAutocomplete" type="text" name="location" placeholder="Enter your address">
+        </div>
+        <div class="col-sm-5 col-md-5 col-lg-5 form-group form-type-div">
+          <input class="form-control" id="search-type" type="text" name="type" placeholder="What are you looking for?">
+        </div>
+        <div class="col-xs-12 col-sm-3 col-md-2 col-lg-1 form-group form-submit-div">
+          <input class="btn btn-primary btn-form-submit" id="submit" type="submit" name="submit" value="submit">
+        </div>
+        <% end %>
       </div>
-      <div class="col-md-4 form-group">
-        <input class="form-control" id="search-type" type="text" name="type" placeholder="What are you looking for?">
-      </div>
-      <div class="col-md-3 form-group">
-        <input class="form-control" id="search-keyword" type="text" name="keyword" placeholder="Keyword (Optional)">
-      </div>
-      <div class="col-md-2 form-group">
-        <input class="btn btn-primary" id="submit" type="submit" name="submit" value="submit">
-      </div>
-    <% end %>
+    </div>
+
+    <%= render partial: 'venues/venue_display', locals: {venues: @venues}%>
+
+    <div class="row show-more">
+      <button type="button" class="btn btn-primary" name="show">Show me more!</button>
+    </div>
+
   </div>
-
-<%= render partial: 'venues/venue_display', locals: {venues: @venues}%>
-
-<div class="row show-more">
-  <button type="button" class="btn btn-primary" name="show">Show me more!</button>
-</div>
