--- a/app/views/searches/create.js.erb
+++ b/app/views/searches/create.js.erb
@@ -1,1 +1,3 @@
 $('.venues').html('<%= j render partial: 'venues/venue_display', locals: { venues: @venues } %>')
+
+populateDisplayedVenuesDetails()
