--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
 
       <div class="row search-form">
         <script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=AIzaSyCx7YX5G2tbXgdLh6tEXoVwXDqSjrw5z-A">
+        src="https://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&key=<%= ENV['GOOGLE_API_KEY_JS'] %>">
         </script>
         <script type="text/javascript">
         function initialize() {
