--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,16 +21,15 @@
 //@import url(https://fonts.googleapis.com/css?family=Josefin+Slab:400,700);
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
 @import url(https://fonts.googleapis.com/css?family=Roboto);
-// 
-// .venue-info {
-//   display: none;
-//   z-index:999;
-//   position:relative;
-// }
+
+
+.venue-info {
+  display: none;
+}
 
 .venue-thumbnail-frame{
-  height: 150px;
-  width: 190px;
+  height: 250px;
+  width: 290px;
   background: black;
   overflow: hidden;
   border: 2px solid white;
@@ -49,26 +48,19 @@
 .venue-img{
   background: #3A6F9A;
   vertical-align: middle;
-  max-height: 100px;
-  max-width: 160px;
+  max-height: 240px;
+  max-width: 280px;
 }
 
 .show-more{
   text-align: center;
 }
-// .josephin-slab{
-// //  font-family: 'Josefin Slab', serif;
-//   font-family: 'Poiret One', cursive;
-//   color: #ffffcc;
-//   font-size: 120px;
-// }
 
 .header-row{
   border-bottom: 5px white solid;
 }
 
 body{
-//  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-family: 'Roboto', sans-serif;
   color: white;
 }
