--- a/app/views/searches/create.js.erb
+++ b/app/views/searches/create.js.erb
@@ -1,3 +1,5 @@
-$('.venues').html('<%= j render partial: 'venues/venue_display', locals: { venues: @venues } %>')
-
+$('.venues').html("<%= j render partial: 'venues/venue_display', locals: { venues: @venues } %>")
+$('.venue-info').hide()
+showInfo()
+hideInfo()
 populateDisplayedVenuesDetails()
