--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,5 +34,14 @@
     </div>
 
     <%= render partial: 'venues/venue_display', locals: {venues: @venues}%>
-
   </div>
+
+  <footer id="footer">
+    <div class="footer-left">
+      <p>Created by: Einar Stensson & Rachel Bronstein</p>
+    </div>
+    <div class="container">
+      <p><a href="#">About IsItOpen?</a>
+      <%= image_tag 'flatiron-slashes.png' %></p>
+    </div>
+  </footer>
