--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,32 @@
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
 @import url(https://fonts.googleapis.com/css?family=Roboto);
 
+.time-panel{
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  float: right;
+  margin-top: -40px;
+  margin-right: -30px;
+  z-index: 10;
+  color: white;
+  display: none;
+}
+
+.time-panel h3{
+  margin-left: auto;
+  margin-top: 35%;
+}
+
+.time-to-open{
+  border: 5px solid #40F86D;
+  background: #02310e;
+}
+
+.time-to-close{
+  border: 5px solid #FB77B8;
+  background: #31021a;
+}
 
 .venue-info {
   display: none;
@@ -31,7 +57,7 @@
 .venue-thumbnail-frame{
   height: 250px;
   background: black;
-  overflow: hidden;
+//  overflow: hidden;
   border: 5px solid #40F86D;
   border-radius: 7px;
   white-space: nowrap;
@@ -108,9 +134,13 @@ body{
 }
 
 
-div.closed *{
-  opacity: 0.6;
+.closed img{
+  opacity: 0.5;
   filter: alpha(opacity=60); /* For IE8 and earlier */
+}
+
+.closed .venue-title{
+  color: gray;
 }
 
 .footer-left{
