--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,8 @@
  // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 *= require_self
 *= require_tree
+*= require jquery-ui/core
+*= require jquery-ui/theme
  */
 
  @import "bootstrap-sprockets";
