logo better, switched to old background

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,7 +120,7 @@ body{
   position: absolute;
   top: 0;
   left: 0;
-  background-image: image-url('brick4.png');
+  background-image: image-url('background.png');
   width: 100%;
   height: 100%;
 //  opacity : 0.4;
