--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
     <div class="header">
       <div class="row header-row">
         <div class='col-xs-12 col-sm-12 col-md-12 logo'>
-          <%= image_tag 'is-it-open.gif', :class => 'img-responsive' %>
+          <%= image_tag 'neonlogobox.gif', :class => 'img-responsive' %>
         </div>
       </div>
       <br><br>
