default image for venues without google photos

--- a/app/views/venues/_venue.html.erb
+++ b/app/views/venues/_venue.html.erb
@@ -5,9 +5,7 @@
       <h5 class="venue-title"><%= venue.name %></h5>
 
       <span class="helper">
-        <img class="venue-img"
-          src="<%= get_venue_photo_reference(venue) %>"
-          alt="<%= venue.name %>" />
+        <%= get_venue_photo_reference(venue) %>
 
           <div class="venue-info">
 
