--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,8 +90,17 @@ body{
   color: white;
 }
 // mobile rendering
-@media screen and {max-width: 600px}{
-  font-size: 100%;
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 2vw;
+  }
+}
+
+// small screen rendering
+@media screen and (max-width: 900px) {
+  body {
+    font-size: 1.5vw;
+  }
 }
 
 .header{
