resize logo and other tweaks

--- a/app/views/venues/_venue.html.erb
+++ b/app/views/venues/_venue.html.erb
@@ -2,7 +2,7 @@
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="venue-thumbnail-frame <% if !venue.open_now %>closed<% end %>" place-id="<%= venue.google_place_id %>">
       <div class='time-panel'></div>
-      <h5 class="venue-title"><%= venue.name %></h5>
+      <h5 class="venue-title"><%= (venue.name).upcase %></h5>
 
       <span class="helper">
         <%= get_venue_photo_reference(venue) %>
